kubernetes/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    # Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # ExternalDNS
    external-dns.alpha.kubernetes.io/hostname: longhorn.homelab.jonasg.be
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    # IMPORTANT: Argo CD expects HTTPS
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - longhorn.homelab.jonasg.be
    secretName: longhorn-tls
  rules:
  - host: longhorn.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
